--- a/Rule_Writing/OutdatedPasswordMD5.yaml
+++ b/Rule_Writing/OutdatedPasswordMD5.yaml
@@ -1,13 +1,16 @@
 rules:
-  - id: week-hashing-md5
+  - id: java-weak-hashing-algorithm
     languages:
       - java
     severity: ERROR
-    message: Weak password!the password is hashed using a weak or outdated algorithm
-      like MD5.
-    pattern-either:
-      - pattern: "MessageDigest $MD=MessageDigest.getInstance(...);\r
-
-          ...\r
-
-          $MD.update(...);"
+    message: Weak hashing algorithm MD5 is used. Consider using a stronger algorithm
+      like SHA-256.
+      Java Cryptography Architecture (JCA) Reference Guide - https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/security/MessageDigest.html
+    patterns:
+      - pattern: MessageDigest $MD = MessageDigest.getInstance("$X");
+      - metavariable-regex:
+          metavariable: $X
+          regex: MD2|MD4|SHA-0|SHA-1|MD5
+    metadata:
+      cwe:
+        - "CWE-328: Use of Weak Hash"
